# docs-wireframe-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: configuration.rst  embedding.rst
docs_wireframe_demo/: __init__.py  content.py  directive.py  validator.py
docs_wireframe_demo/_static/: wireframe-engine.js
examples/: build.py  index.html
examples/demos/: kitchen-sink-full.json  kitchen-sink-short.json
src/docs_wireframe_demo/: directive.py
src/docs_wireframe_demo/static/: wireframe-demo-controller.js  wireframe-demo-controls.css
