[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-wireframe-demo"
version = "0.1.0"
description = "Interactive wireframe demo directive for documentation"
requires-python = ">=3.9"
dependencies = ["sphinx>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["docs_wireframe_demo*"]

[tool.setuptools.package-data]
"docs_wireframe_demo" = ["_static/*"]
